crates/lang/macro/tests/ui/trait_def/fail/config_namespace_invalid_1.rs
use ink_lang as ink;

#[ink::trait_definition(namespace = "::invalid::rust::identifier")]
pub trait InvalidNamespace {
    #[ink(message)]
    fn message(&self);
}

fn main() {}
