crates/lang/macro/tests/ui/trait_def/fail/config_namespace_invalid_1.stderr
error: encountered invalid Rust identifier for the ink! namespace configuration parameter
 --> $DIR/config_namespace_invalid_1.rs:3:37
  |
3 | #[ink::trait_definition(namespace = "::invalid::rust::identifier")]
  |                                     ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
